--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "readmeFilename": "README.md",
   "gitHead": "bfdf7881ac3f1b25d0026d9caf80b8edb5a26c49",
   "dependencies": {
+    "mersenne": "0.0.3"
   },
   "devDependencies": {
     "coffee-script": "~1.5.0"
