--- a/package.json
+++ b/package.json
@@ -1,31 +1,34 @@
 {
-  "name": "fieldkit",
-  "version": "0.0.2",
-  "description": "Basic building blocks for computational design projects. Written in CoffeeScript for browser and server environments.",
-  "main": "lib/fieldkit.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/field/FieldKit.git"
-  },
-  "keywords": [
-    "computational",
-    "design",
-    "generative",
-    "geometry",
-    "physics",
-    "math"
-  ],
-  "author": "Marcus Wendt",
-  "license": "BSD",
-  "readmeFilename": "README.md",
-  "gitHead": "bfdf7881ac3f1b25d0026d9caf80b8edb5a26c49",
-  "dependencies": {
-    "mersenne": "0.0.3"
-  },
-  "devDependencies": {
-    "coffee-script": "~1.5.0"
-  }
+    "name": "fieldkit",
+    "version": "0.0.2",
+    "description": "Basic building blocks for computational design projects. Written in CoffeeScript for browser and server environments.",
+    "main": "lib/fieldkit.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git://github.com/field/FieldKit.git"
+    },
+    "keywords": [
+        "computational",
+        "design",
+        "generative",
+        "geometry",
+        "physics",
+        "math"
+    ],
+    "author": "Marcus Wendt",
+    "license": "BSD",
+    "readmeFilename": "README.md",
+    "gitHead": "bfdf7881ac3f1b25d0026d9caf80b8edb5a26c49",
+    "dependencies": {
+        "mersenne": "0.0.3"
+    },
+    "devDependencies": {
+        "coffee-script": "~1.5.0"
+    },
+    "scripts": {
+        "postinstall": "make dist"
+    }
 }
