--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
         "mersenne": "0.0.3"
     },
     "devDependencies": {
-        "coffee-script": "~1.5.0"
+        "coffee-script": "~1.5.0",
+        "browserify": "~2.4.3",
+        "coffeeify": "0.0.0",
+        "uglify-js": "~2.2.0"
     }
 }
