--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "fieldkit",
-    "version": "0.0.4",
+    "version": "0.0.5",
     "description": "Basic building blocks for computational design projects. Written in CoffeeScript for browser and server environments.",
     "main": "lib/fieldkit.js",
     "scripts": {
@@ -9,7 +9,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "git://github.com/field/FieldKit.git"
+        "url": "git://github.com/field/FieldKit.js.git"
     },
     "keywords": [
         "computational",
