--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
         "browserify": "~2.7.1",
         "coffeeify": "0.0.0",
         "uglify-js": "~2.2.0",
-        "node-static": "~0.6.7"
+        "node-static": "~0.6.7",
+        "mocha": "~1.8.2",
+        "should": "~1.2.2"
     }
 }
