--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "devDependencies": {
         "coffee-script": "~1.6.2",
         "browserify": "~2.7.1",
-        "coffeeify": "0.0.0",
+        "coffeeify": "~0.4.0",
         "uglify-js": "~2.2.0",
         "node-static": "~0.6.7",
         "mocha": "~1.8.2",
